fixed category carousel btn overflowing on mobile

--- a/kolplace - Final React Project SoftUni/client/src/components/Home/CategoryCarousel/CarouselContainer/Carousel.module.css
+++ b/kolplace - Final React Project SoftUni/client/src/components/Home/CategoryCarousel/CarouselContainer/Carousel.module.css
@@ -52,11 +52,13 @@
   .left-btn {
     padding: 8px 12px;
     font-size: 17px;
-    left: 0px;
+    left: 4px;
+    filter: drop-shadow(0 0 2px var(--secondary-color));
   }
   .right-btn {
     padding: 8px 12px;
     font-size: 17px;
-    right: 0px;
+    right: 4px;
+    filter: drop-shadow(0 0 2px var(--secondary-color));
   }
 }
